LexicalAnalysis/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DEFAULT
    SUMA

Grammar

Rule 0     S' -> Start
Rule 1     Start -> code
Rule 2     Start -> empty
Rule 3     code -> INICIO DOSPUNTOS cuerpo FIN PUNTOCOMA procedimiento
Rule 4     variable -> sinini PUNTOCOMA cuerpo
Rule 5     variable -> ini PUNTOCOMA cuerpo
Rule 6     variable -> empty empty empty
Rule 7     cuerpo -> variable
Rule 8     cuerpo -> expresion
Rule 9     expresion -> condicion1 expresion
Rule 10    expresion -> condicion2 expresion
Rule 11    expresion -> repita expresion
Rule 12    expresion -> hacer expresion
Rule 13    expresion -> funcion expresion
Rule 14    expresion -> empty empty
Rule 15    procedimiento -> PROC ID PARENTESIS_IZQ ID PARENTESIS_DER INICIOPROC DOSPUNTOS expresion FINPROC PUNTOCOMA
Rule 16    procedimiento -> empty
Rule 17    repita -> REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
Rule 18    condicion2 -> ENCASO ID cond2Aux2 FINENCASO PUNTOCOMA
Rule 19    cond2Aux2 -> CUANDO condicion sentencia ENTONS LLAVE_IZQ expresion LLAVE_DER SINO LLAVE_IZQ expresion LLAVE_DER
Rule 20    condicion1 -> ENCASO cond1Aux FINENCASO PUNTOCOMA
Rule 21    cond1Aux -> CUANDO ID condicion sentencia ENTONS LLAVE_IZQ expresion LLAVE_DER SINO LLAVE_IZQ expresion LLAVE_DER
Rule 22    hacer -> DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
Rule 23    funcion -> Aleatorio
Rule 24    funcion -> Mover
Rule 25    funcion -> funcionAlge
Rule 26    funcionAlge -> INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
Rule 27    funcionAlge -> DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
Rule 28    funcionAlge -> INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
Rule 29    Mover -> MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
Rule 30    paramMover -> AF
Rule 31    paramMover -> F
Rule 32    paramMover -> DFA
Rule 33    paramMover -> IFA
Rule 34    paramMover -> DFB
Rule 35    paramMover -> IFB
Rule 36    paramMover -> A
Rule 37    paramMover -> DAA
Rule 38    paramMover -> IAA
Rule 39    paramMover -> DAB
Rule 40    paramMover -> IAB
Rule 41    paramMover -> AA
Rule 42    Aleatorio -> ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
Rule 43    condicion -> IGUAL
Rule 44    condicion -> MAYOR
Rule 45    condicion -> MENOR
Rule 46    condicion -> DIFERENTE
Rule 47    condicion -> MAYORIGUAL
Rule 48    condicion -> MENORIGUAL
Rule 49    sentencia -> ID
Rule 50    sentencia -> NUMERO
Rule 51    ini -> DCL ID IGUAL NUMERO
Rule 52    sinini -> DCL ID
Rule 53    empty -> <empty>

Terminals, with rules where they appear

A                    : 36
AA                   : 41
AF                   : 30
ALEATORIO            : 42
COMA                 : 26 27 28
CUANDO               : 19 21
DAA                  : 37
DAB                  : 39
DCL                  : 51 52
DEC                  : 27
DEFAULT              : 
DESDE                : 22
DFA                  : 32
DFB                  : 34
DIFERENTE            : 46
DOSPUNTOS            : 3 15
ENCASO               : 18 20
ENTONS               : 19 21
F                    : 31
FIN                  : 3
FINDESDE             : 22
FINENCASO            : 18 20
FINPROC              : 15
HAGA                 : 22
HASTA                : 22
HASTAENCONTRAR       : 17
IAA                  : 38
IAB                  : 40
ID                   : 15 15 17 18 21 22 26 27 28 49 51 52
IFA                  : 33
IFB                  : 35
IGUAL                : 22 43 51
INC                  : 26
INI                  : 28
INICIO               : 3
INICIOPROC           : 15
LLAVE_DER            : 17 19 19 21 21 22
LLAVE_IZQ            : 17 19 19 21 21 22
MAYOR                : 44
MAYORIGUAL           : 47
MENOR                : 45
MENORIGUAL           : 48
MOVER                : 29
NUMERO               : 50 51
PARENTESIS_DER       : 15 26 27 28 29 42
PARENTESIS_IZQ       : 15 26 27 28 29 42
PROC                 : 15
PUNTOCOMA            : 3 4 5 15 17 18 20 22 26 27 28 29 42
REPITA               : 17
SINO                 : 19 21
SUMA                 : 
error                : 

Nonterminals, with rules where they appear

Aleatorio            : 23
Mover                : 24
Start                : 0
code                 : 1
cond1Aux             : 20
cond2Aux2            : 18
condicion            : 17 19 21
condicion1           : 9
condicion2           : 10
cuerpo               : 3 4 5
empty                : 2 6 6 6 14 14 16
expresion            : 8 9 10 11 12 13 15 17 19 19 21 21 22
funcion              : 13
funcionAlge          : 25
hacer                : 12
ini                  : 5
paramMover           : 29
procedimiento        : 3
repita               : 11
sentencia            : 17 19 21 22 22 26 27 28
sinini               : 4
variable             : 7

Parsing method: LALR

state 0

    (0) S' -> . Start
    (1) Start -> . code
    (2) Start -> . empty
    (3) code -> . INICIO DOSPUNTOS cuerpo FIN PUNTOCOMA procedimiento
    (53) empty -> .

    INICIO          shift and go to state 4
    $end            reduce using rule 53 (empty -> .)

    Start                          shift and go to state 1
    code                           shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> Start .



state 2

    (1) Start -> code .

    $end            reduce using rule 1 (Start -> code .)


state 3

    (2) Start -> empty .

    $end            reduce using rule 2 (Start -> empty .)


state 4

    (3) code -> INICIO . DOSPUNTOS cuerpo FIN PUNTOCOMA procedimiento

    DOSPUNTOS       shift and go to state 5


state 5

    (3) code -> INICIO DOSPUNTOS . cuerpo FIN PUNTOCOMA procedimiento
    (7) cuerpo -> . variable
    (8) cuerpo -> . expresion
    (4) variable -> . sinini PUNTOCOMA cuerpo
    (5) variable -> . ini PUNTOCOMA cuerpo
    (6) variable -> . empty empty empty
    (9) expresion -> . condicion1 expresion
    (10) expresion -> . condicion2 expresion
    (11) expresion -> . repita expresion
    (12) expresion -> . hacer expresion
    (13) expresion -> . funcion expresion
    (14) expresion -> . empty empty
    (52) sinini -> . DCL ID
    (51) ini -> . DCL ID IGUAL NUMERO
    (53) empty -> .
    (20) condicion1 -> . ENCASO cond1Aux FINENCASO PUNTOCOMA
    (18) condicion2 -> . ENCASO ID cond2Aux2 FINENCASO PUNTOCOMA
    (17) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (22) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (23) funcion -> . Aleatorio
    (24) funcion -> . Mover
    (25) funcion -> . funcionAlge
    (42) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (29) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (26) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (27) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (28) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    DCL             shift and go to state 17
    FIN             reduce using rule 53 (empty -> .)
    ENCASO          shift and go to state 18
    REPITA          shift and go to state 19
    DESDE           shift and go to state 20
    ALEATORIO       shift and go to state 24
    MOVER           shift and go to state 25
    INC             shift and go to state 26
    DEC             shift and go to state 27
    INI             shift and go to state 28

    cuerpo                         shift and go to state 6
    variable                       shift and go to state 7
    expresion                      shift and go to state 8
    sinini                         shift and go to state 9
    ini                            shift and go to state 10
    empty                          shift and go to state 11
    condicion1                     shift and go to state 12
    condicion2                     shift and go to state 13
    repita                         shift and go to state 14
    hacer                          shift and go to state 15
    funcion                        shift and go to state 16
    Aleatorio                      shift and go to state 21
    Mover                          shift and go to state 22
    funcionAlge                    shift and go to state 23

state 6

    (3) code -> INICIO DOSPUNTOS cuerpo . FIN PUNTOCOMA procedimiento

    FIN             shift and go to state 29


state 7

    (7) cuerpo -> variable .

    FIN             reduce using rule 7 (cuerpo -> variable .)


state 8

    (8) cuerpo -> expresion .

    FIN             reduce using rule 8 (cuerpo -> expresion .)


state 9

    (4) variable -> sinini . PUNTOCOMA cuerpo

    PUNTOCOMA       shift and go to state 30


state 10

    (5) variable -> ini . PUNTOCOMA cuerpo

    PUNTOCOMA       shift and go to state 31


state 11

    (6) variable -> empty . empty empty
    (14) expresion -> empty . empty
    (53) empty -> .

    FIN             reduce using rule 53 (empty -> .)

    empty                          shift and go to state 32

state 12

    (9) expresion -> condicion1 . expresion
    (9) expresion -> . condicion1 expresion
    (10) expresion -> . condicion2 expresion
    (11) expresion -> . repita expresion
    (12) expresion -> . hacer expresion
    (13) expresion -> . funcion expresion
    (14) expresion -> . empty empty
    (20) condicion1 -> . ENCASO cond1Aux FINENCASO PUNTOCOMA
    (18) condicion2 -> . ENCASO ID cond2Aux2 FINENCASO PUNTOCOMA
    (17) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (22) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (23) funcion -> . Aleatorio
    (24) funcion -> . Mover
    (25) funcion -> . funcionAlge
    (53) empty -> .
    (42) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (29) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (26) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (27) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (28) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    ENCASO          shift and go to state 18
    REPITA          shift and go to state 19
    DESDE           shift and go to state 20
    FIN             reduce using rule 53 (empty -> .)
    LLAVE_DER       reduce using rule 53 (empty -> .)
    FINPROC         reduce using rule 53 (empty -> .)
    ALEATORIO       shift and go to state 24
    MOVER           shift and go to state 25
    INC             shift and go to state 26
    DEC             shift and go to state 27
    INI             shift and go to state 28

    condicion1                     shift and go to state 12
    expresion                      shift and go to state 33
    condicion2                     shift and go to state 13
    repita                         shift and go to state 14
    hacer                          shift and go to state 15
    funcion                        shift and go to state 16
    empty                          shift and go to state 34
    Aleatorio                      shift and go to state 21
    Mover                          shift and go to state 22
    funcionAlge                    shift and go to state 23

state 13

    (10) expresion -> condicion2 . expresion
    (9) expresion -> . condicion1 expresion
    (10) expresion -> . condicion2 expresion
    (11) expresion -> . repita expresion
    (12) expresion -> . hacer expresion
    (13) expresion -> . funcion expresion
    (14) expresion -> . empty empty
    (20) condicion1 -> . ENCASO cond1Aux FINENCASO PUNTOCOMA
    (18) condicion2 -> . ENCASO ID cond2Aux2 FINENCASO PUNTOCOMA
    (17) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (22) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (23) funcion -> . Aleatorio
    (24) funcion -> . Mover
    (25) funcion -> . funcionAlge
    (53) empty -> .
    (42) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (29) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (26) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (27) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (28) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    ENCASO          shift and go to state 18
    REPITA          shift and go to state 19
    DESDE           shift and go to state 20
    FIN             reduce using rule 53 (empty -> .)
    LLAVE_DER       reduce using rule 53 (empty -> .)
    FINPROC         reduce using rule 53 (empty -> .)
    ALEATORIO       shift and go to state 24
    MOVER           shift and go to state 25
    INC             shift and go to state 26
    DEC             shift and go to state 27
    INI             shift and go to state 28

    condicion2                     shift and go to state 13
    expresion                      shift and go to state 35
    condicion1                     shift and go to state 12
    repita                         shift and go to state 14
    hacer                          shift and go to state 15
    funcion                        shift and go to state 16
    empty                          shift and go to state 34
    Aleatorio                      shift and go to state 21
    Mover                          shift and go to state 22
    funcionAlge                    shift and go to state 23

state 14

    (11) expresion -> repita . expresion
    (9) expresion -> . condicion1 expresion
    (10) expresion -> . condicion2 expresion
    (11) expresion -> . repita expresion
    (12) expresion -> . hacer expresion
    (13) expresion -> . funcion expresion
    (14) expresion -> . empty empty
    (20) condicion1 -> . ENCASO cond1Aux FINENCASO PUNTOCOMA
    (18) condicion2 -> . ENCASO ID cond2Aux2 FINENCASO PUNTOCOMA
    (17) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (22) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (23) funcion -> . Aleatorio
    (24) funcion -> . Mover
    (25) funcion -> . funcionAlge
    (53) empty -> .
    (42) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (29) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (26) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (27) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (28) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    ENCASO          shift and go to state 18
    REPITA          shift and go to state 19
    DESDE           shift and go to state 20
    FIN             reduce using rule 53 (empty -> .)
    LLAVE_DER       reduce using rule 53 (empty -> .)
    FINPROC         reduce using rule 53 (empty -> .)
    ALEATORIO       shift and go to state 24
    MOVER           shift and go to state 25
    INC             shift and go to state 26
    DEC             shift and go to state 27
    INI             shift and go to state 28

    repita                         shift and go to state 14
    expresion                      shift and go to state 36
    condicion1                     shift and go to state 12
    condicion2                     shift and go to state 13
    hacer                          shift and go to state 15
    funcion                        shift and go to state 16
    empty                          shift and go to state 34
    Aleatorio                      shift and go to state 21
    Mover                          shift and go to state 22
    funcionAlge                    shift and go to state 23

state 15

    (12) expresion -> hacer . expresion
    (9) expresion -> . condicion1 expresion
    (10) expresion -> . condicion2 expresion
    (11) expresion -> . repita expresion
    (12) expresion -> . hacer expresion
    (13) expresion -> . funcion expresion
    (14) expresion -> . empty empty
    (20) condicion1 -> . ENCASO cond1Aux FINENCASO PUNTOCOMA
    (18) condicion2 -> . ENCASO ID cond2Aux2 FINENCASO PUNTOCOMA
    (17) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (22) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (23) funcion -> . Aleatorio
    (24) funcion -> . Mover
    (25) funcion -> . funcionAlge
    (53) empty -> .
    (42) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (29) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (26) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (27) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (28) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    ENCASO          shift and go to state 18
    REPITA          shift and go to state 19
    DESDE           shift and go to state 20
    FIN             reduce using rule 53 (empty -> .)
    LLAVE_DER       reduce using rule 53 (empty -> .)
    FINPROC         reduce using rule 53 (empty -> .)
    ALEATORIO       shift and go to state 24
    MOVER           shift and go to state 25
    INC             shift and go to state 26
    DEC             shift and go to state 27
    INI             shift and go to state 28

    hacer                          shift and go to state 15
    expresion                      shift and go to state 37
    condicion1                     shift and go to state 12
    condicion2                     shift and go to state 13
    repita                         shift and go to state 14
    funcion                        shift and go to state 16
    empty                          shift and go to state 34
    Aleatorio                      shift and go to state 21
    Mover                          shift and go to state 22
    funcionAlge                    shift and go to state 23

state 16

    (13) expresion -> funcion . expresion
    (9) expresion -> . condicion1 expresion
    (10) expresion -> . condicion2 expresion
    (11) expresion -> . repita expresion
    (12) expresion -> . hacer expresion
    (13) expresion -> . funcion expresion
    (14) expresion -> . empty empty
    (20) condicion1 -> . ENCASO cond1Aux FINENCASO PUNTOCOMA
    (18) condicion2 -> . ENCASO ID cond2Aux2 FINENCASO PUNTOCOMA
    (17) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (22) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (23) funcion -> . Aleatorio
    (24) funcion -> . Mover
    (25) funcion -> . funcionAlge
    (53) empty -> .
    (42) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (29) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (26) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (27) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (28) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    ENCASO          shift and go to state 18
    REPITA          shift and go to state 19
    DESDE           shift and go to state 20
    FIN             reduce using rule 53 (empty -> .)
    LLAVE_DER       reduce using rule 53 (empty -> .)
    FINPROC         reduce using rule 53 (empty -> .)
    ALEATORIO       shift and go to state 24
    MOVER           shift and go to state 25
    INC             shift and go to state 26
    DEC             shift and go to state 27
    INI             shift and go to state 28

    funcion                        shift and go to state 16
    expresion                      shift and go to state 38
    condicion1                     shift and go to state 12
    condicion2                     shift and go to state 13
    repita                         shift and go to state 14
    hacer                          shift and go to state 15
    empty                          shift and go to state 34
    Aleatorio                      shift and go to state 21
    Mover                          shift and go to state 22
    funcionAlge                    shift and go to state 23

state 17

    (52) sinini -> DCL . ID
    (51) ini -> DCL . ID IGUAL NUMERO

    ID              shift and go to state 39


state 18

    (20) condicion1 -> ENCASO . cond1Aux FINENCASO PUNTOCOMA
    (18) condicion2 -> ENCASO . ID cond2Aux2 FINENCASO PUNTOCOMA
    (21) cond1Aux -> . CUANDO ID condicion sentencia ENTONS LLAVE_IZQ expresion LLAVE_DER SINO LLAVE_IZQ expresion LLAVE_DER

    ID              shift and go to state 41
    CUANDO          shift and go to state 42

    cond1Aux                       shift and go to state 40

state 19

    (17) repita -> REPITA . LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA

    LLAVE_IZQ       shift and go to state 43


state 20

    (22) hacer -> DESDE . ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA

    ID              shift and go to state 44


state 21

    (23) funcion -> Aleatorio .

    ENCASO          reduce using rule 23 (funcion -> Aleatorio .)
    REPITA          reduce using rule 23 (funcion -> Aleatorio .)
    DESDE           reduce using rule 23 (funcion -> Aleatorio .)
    ALEATORIO       reduce using rule 23 (funcion -> Aleatorio .)
    MOVER           reduce using rule 23 (funcion -> Aleatorio .)
    INC             reduce using rule 23 (funcion -> Aleatorio .)
    DEC             reduce using rule 23 (funcion -> Aleatorio .)
    INI             reduce using rule 23 (funcion -> Aleatorio .)
    FIN             reduce using rule 23 (funcion -> Aleatorio .)
    LLAVE_DER       reduce using rule 23 (funcion -> Aleatorio .)
    FINPROC         reduce using rule 23 (funcion -> Aleatorio .)


state 22

    (24) funcion -> Mover .

    ENCASO          reduce using rule 24 (funcion -> Mover .)
    REPITA          reduce using rule 24 (funcion -> Mover .)
    DESDE           reduce using rule 24 (funcion -> Mover .)
    ALEATORIO       reduce using rule 24 (funcion -> Mover .)
    MOVER           reduce using rule 24 (funcion -> Mover .)
    INC             reduce using rule 24 (funcion -> Mover .)
    DEC             reduce using rule 24 (funcion -> Mover .)
    INI             reduce using rule 24 (funcion -> Mover .)
    FIN             reduce using rule 24 (funcion -> Mover .)
    LLAVE_DER       reduce using rule 24 (funcion -> Mover .)
    FINPROC         reduce using rule 24 (funcion -> Mover .)


state 23

    (25) funcion -> funcionAlge .

    ENCASO          reduce using rule 25 (funcion -> funcionAlge .)
    REPITA          reduce using rule 25 (funcion -> funcionAlge .)
    DESDE           reduce using rule 25 (funcion -> funcionAlge .)
    ALEATORIO       reduce using rule 25 (funcion -> funcionAlge .)
    MOVER           reduce using rule 25 (funcion -> funcionAlge .)
    INC             reduce using rule 25 (funcion -> funcionAlge .)
    DEC             reduce using rule 25 (funcion -> funcionAlge .)
    INI             reduce using rule 25 (funcion -> funcionAlge .)
    FIN             reduce using rule 25 (funcion -> funcionAlge .)
    LLAVE_DER       reduce using rule 25 (funcion -> funcionAlge .)
    FINPROC         reduce using rule 25 (funcion -> funcionAlge .)


state 24

    (42) Aleatorio -> ALEATORIO . PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA

    PARENTESIS_IZQ  shift and go to state 45


state 25

    (29) Mover -> MOVER . PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA

    PARENTESIS_IZQ  shift and go to state 46


state 26

    (26) funcionAlge -> INC . PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    PARENTESIS_IZQ  shift and go to state 47


state 27

    (27) funcionAlge -> DEC . PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    PARENTESIS_IZQ  shift and go to state 48


state 28

    (28) funcionAlge -> INI . PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    PARENTESIS_IZQ  shift and go to state 49


state 29

    (3) code -> INICIO DOSPUNTOS cuerpo FIN . PUNTOCOMA procedimiento

    PUNTOCOMA       shift and go to state 50


state 30

    (4) variable -> sinini PUNTOCOMA . cuerpo
    (7) cuerpo -> . variable
    (8) cuerpo -> . expresion
    (4) variable -> . sinini PUNTOCOMA cuerpo
    (5) variable -> . ini PUNTOCOMA cuerpo
    (6) variable -> . empty empty empty
    (9) expresion -> . condicion1 expresion
    (10) expresion -> . condicion2 expresion
    (11) expresion -> . repita expresion
    (12) expresion -> . hacer expresion
    (13) expresion -> . funcion expresion
    (14) expresion -> . empty empty
    (52) sinini -> . DCL ID
    (51) ini -> . DCL ID IGUAL NUMERO
    (53) empty -> .
    (20) condicion1 -> . ENCASO cond1Aux FINENCASO PUNTOCOMA
    (18) condicion2 -> . ENCASO ID cond2Aux2 FINENCASO PUNTOCOMA
    (17) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (22) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (23) funcion -> . Aleatorio
    (24) funcion -> . Mover
    (25) funcion -> . funcionAlge
    (42) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (29) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (26) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (27) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (28) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    DCL             shift and go to state 17
    FIN             reduce using rule 53 (empty -> .)
    ENCASO          shift and go to state 18
    REPITA          shift and go to state 19
    DESDE           shift and go to state 20
    ALEATORIO       shift and go to state 24
    MOVER           shift and go to state 25
    INC             shift and go to state 26
    DEC             shift and go to state 27
    INI             shift and go to state 28

    sinini                         shift and go to state 9
    cuerpo                         shift and go to state 51
    variable                       shift and go to state 7
    expresion                      shift and go to state 8
    ini                            shift and go to state 10
    empty                          shift and go to state 11
    condicion1                     shift and go to state 12
    condicion2                     shift and go to state 13
    repita                         shift and go to state 14
    hacer                          shift and go to state 15
    funcion                        shift and go to state 16
    Aleatorio                      shift and go to state 21
    Mover                          shift and go to state 22
    funcionAlge                    shift and go to state 23

state 31

    (5) variable -> ini PUNTOCOMA . cuerpo
    (7) cuerpo -> . variable
    (8) cuerpo -> . expresion
    (4) variable -> . sinini PUNTOCOMA cuerpo
    (5) variable -> . ini PUNTOCOMA cuerpo
    (6) variable -> . empty empty empty
    (9) expresion -> . condicion1 expresion
    (10) expresion -> . condicion2 expresion
    (11) expresion -> . repita expresion
    (12) expresion -> . hacer expresion
    (13) expresion -> . funcion expresion
    (14) expresion -> . empty empty
    (52) sinini -> . DCL ID
    (51) ini -> . DCL ID IGUAL NUMERO
    (53) empty -> .
    (20) condicion1 -> . ENCASO cond1Aux FINENCASO PUNTOCOMA
    (18) condicion2 -> . ENCASO ID cond2Aux2 FINENCASO PUNTOCOMA
    (17) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (22) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (23) funcion -> . Aleatorio
    (24) funcion -> . Mover
    (25) funcion -> . funcionAlge
    (42) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (29) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (26) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (27) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (28) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    DCL             shift and go to state 17
    FIN             reduce using rule 53 (empty -> .)
    ENCASO          shift and go to state 18
    REPITA          shift and go to state 19
    DESDE           shift and go to state 20
    ALEATORIO       shift and go to state 24
    MOVER           shift and go to state 25
    INC             shift and go to state 26
    DEC             shift and go to state 27
    INI             shift and go to state 28

    ini                            shift and go to state 10
    cuerpo                         shift and go to state 52
    variable                       shift and go to state 7
    expresion                      shift and go to state 8
    sinini                         shift and go to state 9
    empty                          shift and go to state 11
    condicion1                     shift and go to state 12
    condicion2                     shift and go to state 13
    repita                         shift and go to state 14
    hacer                          shift and go to state 15
    funcion                        shift and go to state 16
    Aleatorio                      shift and go to state 21
    Mover                          shift and go to state 22
    funcionAlge                    shift and go to state 23

state 32

    (6) variable -> empty empty . empty
    (14) expresion -> empty empty .
    (53) empty -> .

  ! reduce/reduce conflict for FIN resolved using rule 14 (expresion -> empty empty .)
    FIN             reduce using rule 14 (expresion -> empty empty .)

  ! FIN             [ reduce using rule 53 (empty -> .) ]

    empty                          shift and go to state 53

state 33

    (9) expresion -> condicion1 expresion .

    FIN             reduce using rule 9 (expresion -> condicion1 expresion .)
    LLAVE_DER       reduce using rule 9 (expresion -> condicion1 expresion .)
    FINPROC         reduce using rule 9 (expresion -> condicion1 expresion .)


state 34

    (14) expresion -> empty . empty
    (53) empty -> .

    FIN             reduce using rule 53 (empty -> .)
    LLAVE_DER       reduce using rule 53 (empty -> .)
    FINPROC         reduce using rule 53 (empty -> .)

    empty                          shift and go to state 54

state 35

    (10) expresion -> condicion2 expresion .

    FIN             reduce using rule 10 (expresion -> condicion2 expresion .)
    LLAVE_DER       reduce using rule 10 (expresion -> condicion2 expresion .)
    FINPROC         reduce using rule 10 (expresion -> condicion2 expresion .)


state 36

    (11) expresion -> repita expresion .

    FIN             reduce using rule 11 (expresion -> repita expresion .)
    LLAVE_DER       reduce using rule 11 (expresion -> repita expresion .)
    FINPROC         reduce using rule 11 (expresion -> repita expresion .)


state 37
